--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="section-about">
                 <div class="u-text-center u-mb-l">
                     <h2 class="heading-secondery">
-                        Düşük Fiyatlı Güvenilir Takipçi
+                        Düşük Fiyatlı Kalıcı Güvenilir Takipçi
                     </h2>
                 </div>
                 <div class="row justify-content-around">
