--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 </div>
             </section>
             <section class="section-product">
-                <div class="u-text-center u-mb-l" id="pop">
-                    <h2 class="heading-secondery">
+                <div class="u-text-center u-mb-l" >
+                    <h2 class="heading-secondery" id="pop">
                         En popüler ürünlerimizi keşfedin
                     </h2>
                 </div>
